--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/OlgaGuseva1991/myapp/issues"
   },
-  "homepage": "https://github.com/OlgaGuseva1991/myapp#readme"
+  "homepage": "https://github.com/OlgaGuseva1991/myapp#readme",
+  "devDependencies": {
+    "react": "^15.4.2"
+  }
 }
