--- a/package.json
+++ b/package.json
@@ -4,19 +4,44 @@
   "description": "My App",
   "main": "myapp.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --progress --colors --watch",
+    "dev": " webpack-dev-server --colors --inline --hot"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OlgaGuseva1991/myapp.git"
   },
-  "author": "Olga Guseva",
-  "license": "ISC",
+  "author": "Olga Guseva <olga.guseva.1991@gmail.com",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/OlgaGuseva1991/myapp/issues"
   },
   "homepage": "https://github.com/OlgaGuseva1991/myapp#readme",
   "devDependencies": {
-    "react": "^15.4.2"
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.13.0",
+    "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.10.0",
+    "font-awesome": "^4.7.0",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-devtools": "^3.3.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
